k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassionode-svc
  namespace: services
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: cassionode-svc
